readme, favicon, why page, shersh npm name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sher",
+  "name": "shersh",
   "version": "0.1.0",
   "description": "Share frontend project previews via ephemeral URLs",
   "type": "module",
